--- a/test/cases.html
+++ b/test/cases.html
@@ -116,7 +116,7 @@
         return new MaSha(options);
     }
     function assertHTMLEqual(aim, silent){
-        $('.closewrap, .selection_index').remove();
+        $('.anchor, .selection_index').remove();
         $('.user_selection_true').removeClass('user_selection_true');
 
         var output_html = document.getElementById('selectable-content').innerHTML;
