--- a/demo/demo.html
+++ b/demo/demo.html
@@ -10,11 +10,11 @@
     <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script-->
     <!--script type="text/javascript" src="jquery-1.3.2.js"></script-->
     <!--[IF IE]>
-    <script type="text/javascript" src="../src/js/ierange.js"></script>
+    <script type="text/javascript" src="../lib/assets/javascripts/ierange.js"></script>
     <![ENDIF]-->
-    <script type="text/javascript" src="../src/js/masha.js"></script>
+    <script type="text/javascript" src="../lib/assets/javascripts/masha.js"></script>
     
-    <link rel="stylesheet" type="text/css" href="../src/css/masha.css">
+    <link rel="stylesheet" type="text/css" href="../lib/assets/stylesheets/masha.css">
     <style>
     
     body {
