Moving MaSha init outside constructor, to ensure it is done on pageload.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -45,6 +45,8 @@
         console.log(data);
 
         MaSha.instance = new MaSha(data, {'ignored': '.ignored', 'validate': true});
+
+        MaSha.instance.init();
     }
     if (window.addEventListener){
         window.addEventListener('load', init_masha, false);
