Revert "Moving towards wrapping the selection only when highlighting it."
This reverts commit d7dda443558e9fd91bcec59a0223e48a5e7439e5.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -64,10 +64,11 @@
 
         addEventsOnAnchor = function(anchor_span){
             var className = "";
-            var classes = anchor_span.getAttribute("class").split(' ');
+            var classes = anchor_span.parentNode.getAttribute("class").split(' ');
 
             for (var index in classes){
                 if (classes[index].indexOf("num") === 0){
+                    console.log(classes[index]);
                     className = classes[index];
                 }
             }
